--- a/TeamProject/Views/Home/Index.cshtml
+++ b/TeamProject/Views/Home/Index.cshtml
@@ -89,7 +89,7 @@
 
 
 @*adding Social Links*@
-@*<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="box" style="opacity:1;">
     <div class="container">
         <div class="row">
@@ -129,7 +129,7 @@
                     <a href="https://www.twitter.com">Learn More</a>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+            <div class="col-lg-6 col-md-4 col-sm-4 col-xs-12">
                 <div class="box-part text-center rounded-circle">
                     <i class="fa fa-pinterest-p fa-3x" aria-hidden="true" style="color: cadetblue;"></i>
                     <div class="title">
@@ -141,7 +141,7 @@
                     <a href="https://gr.pinterest.com/">Learn More</a>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+            @*<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                 <div class="box-part text-center rounded-circle">
                     <i class="fa fa-google-plus fa-3x" aria-hidden="true" style="color: cadetblue;"></i>
                     <div class="title">
@@ -152,8 +152,8 @@
                     </div>
                     <a href="https://plus.google.com/discover">Learn More</a>
                 </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+            </div>*@
+            <div class="col-lg-6 col-md-4 col-sm-4 col-xs-12">
                 <div class="box-part text-center rounded-circle">
                     <i class="fa fa-github fa-3x" aria-hidden="true" style="color: cadetblue;"></i>
                     <div class="title">
@@ -167,7 +167,7 @@
             </div>
         </div>
     </div>
-</div>*@
+</div>
 
 @section Scripts{
 
