--- a/TeamProject/Areas/Admin/Views/Courts/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Index.cshtml
@@ -59,7 +59,8 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                 @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
+                @Html.ActionLink("TimeSlots", "Index", "TimeSlots", new { id = item.Id }, null)
             </td>
         </tr>
     }
