visual fix on branches index view/deleted constructor from booking report/get court bookings method on branch manager

--- a/TeamProject/Areas/Admin/Views/Branches/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Index.cshtml
@@ -57,7 +57,7 @@
             @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
             @Html.ActionLink("Courts", "Index", "courts", new { id = item.Id }, null) |
             @Html.ActionLink("Facilities", "ChooseFacilities", "BranchFacilities", new { id = item.Id },null) |
-            @Html.ActionLink("Bookings", "Index", "Bookings", new { id = item.Id },null)
+            @Html.ActionLink("Bookings", "Index", "Bookings", new { id = item.Id },null) |
             @Html.ActionLink("Reports", "Index","Reports", new { id = item.Id }, null)
         </td>
     </tr>
