--- a/TeamProject/Areas/Admin/Views/Courts/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Edit.cshtml
@@ -1,4 +1,4 @@
-@model TeamProject.Models.CourtTimeslots
+@model TeamProject.Models.Court
 
 @{
     ViewBag.Title = "Edit";
@@ -14,61 +14,61 @@
     <h2>Court Edit</h2>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.Court.Id)
+    @Html.HiddenFor(model => model.Id)
 
     @if (isAdmin)
     {
         <div class="form-group">
-            @Html.LabelFor(model => model.Court.BranchId, "BranchId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.BranchId, "BranchId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("BranchId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Court.BranchId, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.BranchId, "", new { @class = "text-danger" })
             </div>
         </div>
     }
     else
     {
-        @Html.HiddenFor(model => model.Court.BranchId)
+        @Html.HiddenFor(model => model.BranchId)
     }
     <div class="form-group">
-        @Html.LabelFor(model => model.Court.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Court.Name, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Court.Name, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Court.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Court.Description, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Court.Description, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Court.MaxPlayers, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.MaxPlayers, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Court.MaxPlayers, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Court.MaxPlayers, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.MaxPlayers, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.MaxPlayers, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Court.Price, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Court.Price, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Court.Price, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.Court.ImageCourt, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.ImageCourt, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <input type="file" name="imagefile" />
-            @Html.ValidationMessageFor(model => model.Court.ImageCourt, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.ImageCourt, "", new { @class = "text-danger" })
         </div>
     </div>
-    @Html.HiddenFor(model => model.Court.ImageCourt)
+    @Html.HiddenFor(model => model.ImageCourt)
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Save" class="btn btn-secondary" />
@@ -77,12 +77,12 @@
 </div>
 }
 <div>
-    @Html.ActionLink("Back to Courts", "Index",new { id=Model.Court.BranchId })
+    @Html.ActionLink("Back to Courts", "Index",new { id=Model.BranchId })
 </div>
 <hr />
 
 <div>
-    @Html.ActionLink("Manage TimeSlots", "Index", "Timeslots", new { id = Model.Court.Id }, null)
+    @Html.ActionLink("Manage TimeSlots", "Index", "Timeslots", new { id = Model.Id }, null)
 </div>
 
 
