--- a/TeamProject/Areas/Admin/Views/Bookings/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Bookings/Index.cshtml
@@ -113,32 +113,32 @@
             <table class="table">
                 <tr>
                     <th>
-                        @Html.DisplayNameFor(model => model.Bookings.FirstOrDefault().User.Firstname)
+                        @Html.DisplayNameFor(model => model.Bookings.FirstOrDefault().BookedAt)
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.Bookings.FirstOrDefault().BookedAt)
+                        @Html.DisplayNameFor(model => model.Bookings.FirstOrDefault().User.UserName)
                     </th>
                     <th>
                         @Html.DisplayNameFor(model => model.Bookings.FirstOrDefault().Duration)
                     </th>
-                    <th></th>
+
                 </tr>
 
                 @foreach (var item in Model.Bookings)
                 {
                     <tr>
                         <td>
-                            @Html.DisplayFor(modelItem => item.User.Firstname)
+                            @Html.DisplayFor(modelItem => item.BookedAt)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.BookedAt)
+                            @Html.DisplayFor(modelItem => item.User.UserName)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Duration)
                         </td>
                         <td>
                             @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                            @Html.ActionLink("Cancel", "Delete", new { id = item.Id })
                         </td>
                     </tr>
                 }
@@ -241,13 +241,13 @@
 
             $('.tab-selection li a').on('click', function () {
                 var $prevActive = $('.tab-selection a.active');
-                
+
                 $prevActive.removeClass('active');
                 $(this).addClass('active');
 
                 $($prevActive.attr('container')).hide();
                 $($(this).attr('container')).show();
-                
+
             });
         });
 
