change index titles/now showing corresponding title

--- a/TeamProject/Areas/Admin/Views/Branches/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<TeamProject.Models.Branch>
 @using TeamProject.Models
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Branches";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
