--- a/TeamProject/Views/Reviews/Index.cshtml
+++ b/TeamProject/Views/Reviews/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<TeamProject.Models.Review>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Reviews";
 }
 
 <h2>Index</h2>
