--- a/TeamProject/Areas/Admin/Views/Courts/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<TeamProject.Models.Court>
 @*@using TeamProject.Models;*@
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Courts";
 }
 
 <h2>Courts</h2>
