finished fixing index page titles

--- a/TeamProject/Areas/Admin/Views/Panel/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Panel/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using TeamProject.Models;
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Panel";
     User user = Session["user"] as User;
 }
 
