--- a/TeamProject/Areas/Admin/Views/TimeSlots/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/TimeSlots/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<TeamProject.ModelsViews.TimeslotApiView>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Time Slots";
 }
 
 <h2>TimeSlots <small class="text-muted">@ViewBag.courtName</small></h2>
