--- a/TeamProject/Areas/Admin/Views/Users/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Users/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<TeamProject.Models.User>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Users";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
