--- a/TeamProject/Views/Home/About.cshtml
+++ b/TeamProject/Views/Home/About.cshtml
@@ -36,7 +36,7 @@
         <div class="col-4">
             <figure>
                 <img src="~/Images/About/g_chaniotakis.jpg" alt="No Image" />
-                <figcaption style="width:200px">Spam your qualities here. Spam your qualities here. Spam your qualities here</figcaption>
+                <figcaption style="width:200px">Database Leader. Took care of the database and reports feature. Also made sure about the correct use of grammar.</figcaption>
             </figure>
         </div>
         <div class="col-4">
