--- a/TeamProject/Areas/Admin/Views/Reports/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Reports/Index.cshtml
@@ -10,29 +10,6 @@
     <h2 class="text-center" style="margin-top:150px;">Branch Total</h2>
 </div>
 <canvas id="doughnutChart"></canvas>
-@section scripts{
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.1/js/mdb.min.js"></script>
-    <script>
-        //doughnut
-        var ctxD = document.getElementById("doughnutChart").getContext('2d');
-        var myLineChart = new Chart(ctxD, {
-            type: 'doughnut',
-            data: {
-                labels: ["Red", "Green", "Yellow", "Grey", "Dark Grey"],
-                datasets: [{
-                    /*data: [300, 50, 100, 40, 120]*/
-                    @Html.Raw(ViewBag.Data),
-                    backgroundColor: ["#F7464A", "#46BFBD", "#FDB45C", "#949FB1", "#4D5360"],
-                    hoverBackgroundColor: ["#FF5A5E", "#5AD3D1", "#FFC870", "#A8B3C5", "#616774"]
-                }]
-            },
-            options: {
-                responsive: true
-            }
-        });
-
-    </script>
-}
 <br />
 @foreach (var court in Model)
 {
@@ -40,5 +17,33 @@
     <h2 class="text-center">@court.Name</h2>
     <canvas id="doughnutChart"></canvas>
 }
+
+@section scripts{
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.1/js/mdb.min.js"></script>
+    <script>
+        //Branch Charts
+        showChart([@Html.Raw(ViewBag.Labels)], [@Html.Raw(ViewBag.Data)]);
+
+        function showChart(labels, data) {
+
+            var ctxD = document.getElementById("doughnutChart").getContext('2d');
+            var myLineChart = new Chart(ctxD, {
+                type: 'doughnut',
+                data: {
+                    labels: labels,
+                    datasets: [{
+                        data: data,
+                        backgroundColor: ["#F7464A", "#46BFBD", "#FDB45C", "#949FB1", "#4D5360"],
+                        hoverBackgroundColor: ["#FF5A5E", "#5AD3D1", "#FFC870", "#A8B3C5", "#616774"]
+                    }]
+                },
+                options: {
+                    responsive: true
+                }
+            });
+        }
+    </script>
+}
+
 
 
