--- a/TeamProject/Views/Shared/_Layout.cshtml
+++ b/TeamProject/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     @RenderSection("styles", required: false)
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="shortcut icon" href="~/favicon.ico"/>
 </head>
 <body>
     @Html.Partial("_NavBarPartial")
