Added css rules for fa icons in Timeslot view

--- a/TeamProject/Content/Site.css
+++ b/TeamProject/Content/Site.css
@@ -69,3 +69,10 @@
     text-align: center;
     box-shadow: none;
 }
+
+.timeslot-header .fas:hover {
+    cursor:pointer;
+}
+.timeslot-header .fas:active{
+    cursor:wait;
+}
