--- a/TeamProject/Views/Shared/_FooterPartial.cshtml
+++ b/TeamProject/Views/Shared/_FooterPartial.cshtml
@@ -5,60 +5,43 @@
         <!-- Grid row-->
         <div class="row text-center d-flex justify-content-center pt-5 mb-3">
 
-            <!-- Grid column -->
             <div class="col-md-2 mb-3">
-                <h6 class="text-uppercase font-weight-bold">                    
-                    @Html.ActionLink("About us", "About", "Home")
+                <h6 class="text-uppercase font-weight-bold">
+                    @Html.ActionLink("Courts", "Index", "Courts", new { area = "" })
                 </h6>
             </div>
             <!-- Grid column -->
-            @*<div class="col-md-2 mb-3">
+            <div class="col-md-2 mb-3">
                 <h6 class="text-uppercase font-weight-bold">
-                    <a href="#!">Products</a>
+                    @Html.ActionLink("About us", "About", "Home")
                 </h6>
-            </div>*@
+            </div>
             <!-- Grid column -->
             <div class="col-md-2 mb-3">
                 <h6 class="text-uppercase font-weight-bold">
                     <a href="#!">Awards</a>
                 </h6>
             </div>
-            <!-- Grid column -->
-            @*<div class="col-md-2 mb-3">
-                <h6 class="text-uppercase font-weight-bold">
-                    <a href="#!">Help</a>
-                </h6>
-            </div>*@
-            <!-- Grid column -->
             <div class="col-md-2 mb-3">
                 <h6 class="text-uppercase font-weight-bold">
-                    @*<a href="#">Contact</a>*@
                     @Html.ActionLink("Contact", "Contact", "Home")
                 </h6>
-            </div>
-            <!-- Grid column -->
+            </div>          
         </div>
-        <!-- Grid row-->
-        <hr class="rgba-white-light" style="margin: 0 15%;">
+        
+        <hr class="rgba-white-light">
 
         <!-- Grid row-->
-        <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
-            <!-- Grid column -->
+        <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">        
             <div class="col-md-8 col-12 mt-5 text-secondary">
                 <p style="line-height: 1.7rem;">
-                    BookYourCourt begun as an academic project of a 5-member team, that evolved into a life work project.
-                    Bounded by our common passion, football, we created an easy-to-use website, where experienced players,
-                    formed teams and football enthusiasts can find their nearest court to play!
-                    Thanks for showing interest in our website. Recommendations and suggestions are most welcomed! If you wish to 
-                    be a part of our network, fill in the registration form and one of us will contact you shortly!
+                    Follow us on Socials!
                 </p>
-            </div>
-            <!-- Grid column -->
+            </div>          
         </div>
-        <!-- Grid row-->
-        <hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
-
-        <!-- Grid row-->
+        
+        @*<hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">*@
+       
         <div class="row pb-3" style="margin-top: 25px; margin-bottom:-40px;">
 
             <!-- Grid column -->
