--- a/TeamProject/Views/Shared/_LayoutHome.cshtml
+++ b/TeamProject/Views/Shared/_LayoutHome.cshtml
@@ -15,7 +15,7 @@
     <div class="container-fluid-NoPadding">
         @RenderBody()
         <hr />
-        @Html.Partial("_FooterPartial")
+        @Html.Partial("_HomePageFooterPartial")
     </div>
 
     @Scripts.Render("~/bundles/jquery")
