made first name and last name required again/fixed display names/small adition to join view

--- a/TeamProject/Areas/Admin/Views/Users/Join.cshtml
+++ b/TeamProject/Areas/Admin/Views/Users/Join.cshtml
@@ -59,5 +59,7 @@
                 <input type="submit" value="Create" class="btn btn-secondary" />
             </div>
         </div>
+
+        <h5>All fields are mandatory.</h5>
     </div>
 }
