--- a/TeamProject/Views/Courts/Details.cshtml
+++ b/TeamProject/Views/Courts/Details.cshtml
@@ -18,21 +18,13 @@
                 @Model.Description
             </div>
         </div>
-        <div class="col-md-6">
-            <h2 class="text-center"> Facilities </h2>
-            <div class="row">
-                @foreach (var item in ViewBag.Facilities)
-                {
-                    <div class="col-md-3">
-                        <h6 class="text-center">@item.Description</h6>
-                        <img src="~/Images/Facilities/@item.ImageFacility" alt="@item.Description" class="card-img" />
-                    </div>
-                }
-            </div>
+        <div class="col">
+            @Html.Partial("FacilitiesPartial", ViewBag.Facilities as IEnumerable<TeamProject.Models.Facility>)
         </div>
     </div>
-
 </div>
+
+
 <div class="mt-5">
     @Html.ActionLink("Back to Courts", "Index", "Courts", new { id = Model.Branch.Id }, null)
 </div>
