Change Layout css in Home page for Socials

--- a/TeamProject/Views/Home/Index.cshtml
+++ b/TeamProject/Views/Home/Index.cshtml
@@ -92,7 +92,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="box" style="opacity:1;">
     <div class="container">
+        <hr />
         <div class="row">
+
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                 <div class="box-part text-center rounded-circle">
                     <i class="fa fa-instagram fa-3x" aria-hidden="true" style="color: cadetblue;"></i>
@@ -102,7 +104,7 @@
                     <div class="text">
                         <span>Follow us on Instagram.</span>
                     </div>
-                    <a href="https://www.instagram.com/">Learn More</a>
+                    <a href="https://www.instagram.com/">Follow Us.</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
@@ -114,7 +116,7 @@
                     <div class="text">
                         <span>Like Us on Facebook</span>
                     </div>
-                    <a href="https://www.facebook.com">Learn More</a>
+                    <a href="https://www.facebook.com">Follow Us.</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
@@ -126,10 +128,10 @@
                     <div class="text">
                         <span>Follow us on Twitter.</span>
                     </div>
-                    <a href="https://www.twitter.com">Learn More</a>
+                    <a href="https://www.twitter.com">Follow Us.</a>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-4 col-sm-4 col-xs-12">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                 <div class="box-part text-center rounded-circle">
                     <i class="fa fa-pinterest-p fa-3x" aria-hidden="true" style="color: cadetblue;"></i>
                     <div class="title">
@@ -138,22 +140,10 @@
                     <div class="text">
                         <span>Follow us on Pinterest.</span>
                     </div>
-                    <a href="https://gr.pinterest.com/">Learn More</a>
+                    <a href="https://gr.pinterest.com/">Follow Us.</a>
                 </div>
             </div>
-            @*<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <div class="box-part text-center rounded-circle">
-                    <i class="fa fa-google-plus fa-3x" aria-hidden="true" style="color: cadetblue;"></i>
-                    <div class="title">
-                        <h4>Google</h4>
-                    </div>
-                    <div class="text">
-                        <span>Follow us on Google+.</span>
-                    </div>
-                    <a href="https://plus.google.com/discover">Learn More</a>
-                </div>
-            </div>*@
-            <div class="col-lg-6 col-md-4 col-sm-4 col-xs-12">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                 <div class="box-part text-center rounded-circle">
                     <i class="fa fa-github fa-3x" aria-hidden="true" style="color: cadetblue;"></i>
                     <div class="title">
@@ -162,7 +152,7 @@
                     <div class="text">
                         <span>Check Our Code on Github.</span>
                     </div>
-                    <a href="https://github.com/session">Learn More</a>
+                    <a href="https://github.com/session">Follow Us.</a>
                 </div>
             </div>
         </div>
