--- a/TeamProject/Views/Home/Contact.cshtml
+++ b/TeamProject/Views/Home/Contact.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model TeamProject.Models.ContactForm
+
+@{
     ViewBag.Title = "Contact";
 }
 @section Styles{
@@ -30,28 +32,56 @@
             </address>
 
         </div>
+
+
+
         <div class="column">
-            <form>
-                <label for="fname">First Name</label>
-                <input type="text" id="fname" name="firstname" placeholder="Type your First name" />
 
-                <label for="lname">Last Name</label>
-                <input type="text" id="lname" name="lastname" placeholder="Type your Last name" />
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
-                <label for="email">Email</label>
-                <input type="text" id="email" name="email" placeholder="Type your Email" />
+                <div class="form-group">
+                    @Html.LabelFor(model => model.FirstName, "First Name", htmlAttributes: new { @class = "control-label col-md-4" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-                <label for="subject">Subject</label>
-                <select id="subject" name="subject">
-                    <option value="newApplication">New Branch Application</option>
-                    <option value="technicalIssue">Technical Issue</option>
-                    <option value="generalInfo">General Information</option>
-                </select>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.LastName, "Last Name", htmlAttributes: new { @class = "control-label col-md-4" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-                <label for="body">Body</label>
-                <textarea id="body" name="body" placeholder="Share your thoughts" style="height:170px"></textarea>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Email, "Email", htmlAttributes: new { @class = "control-label col-md-4" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.SubjectSelector, "Subject", htmlAttributes: new { @class = "control-label col-md-4" })
+                    <div class="col-md-10">
+                        @Html.EnumDropDownListFor(model => model.SubjectSelector, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.SubjectSelector, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Body, "Body", htmlAttributes: new { @class = "control-label col-md-4" })
+                    <div class="col-md-10">
+                        @Html.TextAreaFor(model => model.Body, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Body, "", new { @class = "text-danger" })
+                    </div>
+                </div>
                 <input type="submit" value="Submit">
-            </form>
+            }
         </div>
     </div>
 </div>
